<resources>
    <string name="app_name">AppLock</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>


    <string name="setting">Setting</string>
    <string name="share">Share</string>
    <string name="facebook">Facebook</string>
    <string name="contactUs">Contact us</string>

    <string name="home_second">Home Second</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <string name="no_intruder_photo">No intruder photo</string>
    <string name="permission">permission</string>
    <string name="cancel">Cancel</string>
    <string name="passCode">PassCode</string>
    <string name="fingerPrint">FingerPrint</string>
    <string name="fingerDes">Use verified fingerprints to unlock apps</string>
    <string name="addFinger">To use fingerprints, please open settings on phone and add fingerprints firstly</string>
    <string name="ok">OK</string>
    <string name="search">search</string>
    <string name="check">Kiểm tra</string>
    <string name="imgRecentDes">Có người cố gắng xâm nhập vào ứng dụng của bạn</string>
    <string name="doYouWantDeleteImg">Bạn có muốn xóa hình ảnh kẻ xâm nhập không?</string>
    <string name="deleteSuccess">Delete Success</string>
    <string name="delete">Delete</string>
    <string name="saveToLibrary">Save to gallery</string>
    <string name="question1">What is your birthday?</string>
    <string name="question2"> Your email?</string>
    <string name="question3">Your lover\'s name?</string>
    <string name="save">Save</string>
    <string name="title_des_question">Answer the following security questions</string>
    <string name="errorEmail">Please enter the correct email format</string>
    <string name="erroEmptyLover">Please do not leave this field blank. If you don\'t have a lover, enter your Crush name</string>
    <string name="erroEmpty">Please enter your date of birth</string>
    <string name="inputQuestionEr">Please check your answer</string>
    <string name="setquestion">Security Setting</string>
    <string name="inputQuestionSuccess">Successful reply setting</string>
    <string name="forgetPass">Forgot password?</string>
    <string name="doYouWantToRetrieveYourPass">"Do you want to retrieve your password?"</string>
    <string name="inputQuestionToRetrievePass">Forgot Password</string>
    <string name="send_email_report_app">Send Feedback:</string>
    <string name="inputQuestionAnswerErr">You answered wrongly</string>
    <string name="cantSave">Images cannot be saved to the gallery because you have not given permission to the app</string>
    <string name="pathImageSave">The photo has been successfully saved to the location</string>
    <string name="importantApp">Advanced</string>
    <string name="otherApp">Other applications</string>
    <string name="lockNewApp">Newly installed app lock?</string>
    <string name="no">No</string>
    <string name="lock">Lock</string>
    <string name="lockSuccess">Lock Success</string>
    <string name="accessibility_service_description">The app requires accessibility permissions to function</string>
    <string name="permissionACCESSIBILITY">The app requires accessibility permissions</string>
    <string name="permissionOverlay">Allows the app to display content on other apps</string>
    <string name="permissionUsageStats">Allows the app to access data</string>
    <string name="warning">Warning!!!</string>
    <string name="warningUnlockSettings">Unlock Setting will reduce security. We recommend locking it</string>
    <string name="unlock">Unlock</string>
    <string name="lockNewAppDes">After installing a new app, you can tap to lock it</string>
    <string name="introduce">Introduce</string>
    <string name="app_name_version">AppLock v2.0.0</string>
    <string name="agreeUser">User Agreement</string>
    <string name="mail">support@tapbi.vn</string>
    <string name="website">www.tapbi.vn</string>
    <string name="shareAppDes"><![CDATA[Hello, I am using << App Lock >> developed by TapBi.vn, please try this great app.]]></string>
    <string name="wifi">Wifi</string>
    <string name="lockSwitch">Lock Switch</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="themes">Themes</string>
    <string name="backGround">Background</string>
    <string name="home">Home</string>
    <string name="hot">HOT</string>
    <string name="installed">INSTALLED</string>

    <string name="privacy">PRIVACY</string>
    <string name="protect">PROTECT</string>
    <string name="set_pattern_lock">Change patternLock</string>
    <string name="set_passcode">Change passcode</string>

    <string name="securitySettingDes">Set security questions to reset passwords when needed</string>
    <string name="unlockSetting">Unlock Setting</string>
    <string name="unLockSettingDes">Change the lock mode: PatternLock or PassCode</string>
    <string name="catchIntruder">Catch Intruder</string>
    <string name="catchIntruderDes">Take a picture of the intruder when you enter the wrong password more than three times</string>
    <string name="newlyInstalledAppLock">Newly Installed App Lock</string>
    <string name="newlyInstalledAppLockDes">After installing a new app you can press to lock it</string>
    <string name="patternLock">PatternLock</string>
    <string name="saveAll">Save All</string>
    <string name="deleteAll">Delete All</string>
    <string name="deleteDes">Are you sure you want to delete the intruder image?</string>
    <string name="patternLockSetting">PatternLock Setting</string>
    <string name="passCodeSetting">PassCode Setting</string>
    <string name="styleDisplay">Style Display</string>
    <string name="styleDisplayDes">Lets display a pattern when unlocking</string>
    <string name="vibrationWhenTouched">Vibration when touched</string>
    <string name="create_a_vibration_effect_when_unlocking">Create a vibration effect when unlocking</string>
    <string name="changePassSuccess">Password has been changed</string>
    <string name="enterYourPassLock">Enter Your PassLock</string>
    <string name="enterYourPatternLock">Enter Your PatternLock</string>
    <string name="youNeedToSetPassForFirstTime">You need to set a password for  the first time using the app</string>
    <string name="confirmPassWord">Confirm password</string>
    <string name="allow">Allow</string>
    <string name="securitySetting">Security Setting</string>
    <string name="usePassLock">Use PassLock</string>
    <string name="identityVerification">Identity verification</string>
    <string name="useFingerprintsToVerifyYourIdentity">Use fingerprints to verify your identity</string>
    <string name="enterYourPassCode">Enter Your PassCode</string>
    <string name="YourAnswerIsNotCorrect">"Your answer is not correct. Please enter again "</string>
    <string name="pleaseSetPassCode">Please set up passcode first</string>
    <string name="defaults">Default</string>
    <string name="permissionDenied">Permission Denied</string>
    <string name="searchApp">Search App</string>
    <string name="successfulManipulation">Successful manipulation</string>
    <string name="confirm">Confirm</string>
    <string name="usePassCode">Use PassCode</string>
    <string name="usePatternLock">Use PatternLock</string>
    <string name="chooseAll">Choose All</string>
    <string name="choose">Choose</string>
    <string name="save_image">"Photos are saved"</string>
    <string name="no_support_get_video">No support to get video</string>

    <string name="folderImageSave">"Photos are saved to the location: "</string>
    <string name="You_need_to_enable_permissions_to_use_this_feature">You need to enable permissions</string>
    <string name="go_to_setting">go to setting</string>
    <string name="go_back">go back</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="minumum_pass">Minimum password length is 4</string>
    <string name="wrong_pass">Wrong pass</string>
    <string name="error_finger">Fingerprint is not working, please try another lock</string>

</resources>
